# AeroViz

./: .gitattributes  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  DATA_PROCESSING_FLOW.md  LICENSE  MANIFEST.in  README.md  index.html  install_mac_linux.sh  install_windows.bat  mcp_config_example.json  meson.build  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  tox.ini
.github/workflows/: bump.yml  cleanup.yml  docs.yml  publish.yml  pytest.yml  unpublish.yml  wheels.yml
AeroViz/: __init__.py  chemistry.py  mcp_server.py  optical.py  size.py  voc.py
AeroViz/config/: DEFAULT_DATA.csv
AeroViz/data/: DEFAULT_DATA.csv  DEFAULT_PNSD_DATA.csv  hysplit_example_data.txt
AeroViz/dataProcess/: README.md  __init__.py
AeroViz/dataProcess/Chemistry/: __init__.py  _calculate.py  _isoropia.py  _mass_volume.py  _ocec.py  _partition.py  _teom.py  isrpia.cnf
AeroViz/dataProcess/Chemistry/_isorropia/: THIRD_PARTY_NOTICES.md  __init__.py  meson.build  wrapper.f90
AeroViz/dataProcess/Optical/: Angstrom_exponent.py  PyMieScatt_update.py  _IMPROVE.py  __init__.py  _absorption.py  _derived.py  _extinction.py  _mie.py  _mie_sd.py  _retrieve_RI.py  _scattering.py  coefficient.py  fRH.pkl  mie.py  mie_angular.py  mie_core_shell.py  mie_inverse.py  mie_kernels.py  mie_theory.py
AeroViz/dataProcess/SizeDistr/: __init__.py  __merge.py  _merge.py  _merge_v1.py  _merge_v2.py  _merge_v3.py  _merge_v4.py  _size_dist.py  _size_distr.py
AeroViz/dataProcess/VOC/: __init__.py  _potential_par.py  support_voc.json  voc_par.json  voc_par.pkl
AeroViz/dataProcess/core/: __init__.py  _constants.py
AeroViz/plot/: __init__.py  bar.py  box.py  pie.py  radar.py  regression.py  scatter.py  violin.py
AeroViz/plot/distribution/: __init__.py  distribution.py
AeroViz/plot/hysplit/: __init__.py  hysplit.py
AeroViz/plot/improve/: __init__.py  improve.py
AeroViz/plot/meteorology/: CBPF.py  __init__.py  hysplit.py  meteorology.py  wind_rose.py
AeroViz/plot/optical/: __init__.py  aethalometer.py  optical.py
AeroViz/plot/templates/: __init__.py  ammonium_rich.py  contour.py  corr_matrix.py  diurnal_pattern.py  event_evolution.py  koschmieder.py  metal_heatmap.py  regression.py  scatter.py  (+1 more)
AeroViz/process/: __init__.py
AeroViz/rawDataReader/: FLOW.md  __init__.py
AeroViz/tools/: __init__.py  database.py  dataclassifier.py  dataprinter.py  datareader.py  quickProcess.py
CHANGELOG/: index.html
MANUAL/: index.html
api/: index.html
api/AbstractReader/: index.html
api/DataProcess/: index.html
api/QualityControl/: index.html
api/RawDataReader/: index.html
api/instruments/: index.html
api/plot/: index.html
assets/: diagram.py
docs/: CHANGELOG.md  MANUAL.md  home.md  index.md  plot_user_guide.md  user_guide.md
docs/_static/: custom.css
docs/api/: AbstractReader.md  DataProcess.md  QualityControl.md  RawDataReader.md  index.md
docs/api_reference/: RawDataReader.md
docs/example/: RawDataReader.py  scatter_examples.py
docs/guide/: DataProcess.md  RawDataReader.md  chemical_analysis.md  data.md  dataprocess.md  examples.md  getting-started.md  index.md  optical_closure.md  plot.md  rawdatareader-internals.md  rawdatareader.md  size_distribution.md  support_voc.md  visualization.md  voc_analysis.md
docs/instruments/: AE33.md  APS.md  Aurora.md  BC1054.md  GRIMM.md  TEOM.md  instrument_overview.md
docs/javascripts/: mathjax.js
docs/overrides/: announce.html  main.html
docs/source/: conf.py
docs/stylesheets/: extra.css
docs/theory/: icrp.md  improve.md  index.md  kappa.md  lognormal.md  mass_reconstruction.md  mie.md  ofp.md
examples/: 01_basic_reading.py  02_multiple_instruments.py  03_quality_control.py  04_size_distribution.py  05_chemical_analysis.py  06_optical_properties.py  07_plotting.py  README.md
guide/: index.html
guide/DataProcess/: index.html
guide/RawDataReader/: index.html
guide/chemical_analysis/: index.html
guide/data/: index.html
guide/dataprocess/: index.html
guide/examples/: index.html
guide/getting-started/: index.html
guide/instruments/: index.html
guide/optical_closure/: index.html
guide/plot/: index.html
guide/rawdatareader/: index.html
guide/rawdatareader-internals/: index.html
guide/size_distribution/: index.html
guide/visualization/: index.html
guide/voc_analysis/: index.html
home/: index.html
instruments/: index.html
instruments/AE33/: index.html
instruments/AE43/: index.html
instruments/APS/: index.html
instruments/Aurora/: index.html
instruments/BC1054/: index.html
instruments/GRIMM/: index.html
instruments/IGAC/: index.html
instruments/MA350/: index.html
instruments/NEPH/: index.html
instruments/OCEC/: index.html
instruments/SMPS/: index.html
instruments/TEOM/: index.html
instruments/VOC/: index.html
instruments/XRF/: index.html
instruments/instrument_overview/: index.html
scripts/: install_unix.sh  install_windows.bat
search/: search_index.json
stylesheets/: claude-code-navigation.css  extra.css
tests/: conftest.py  test_RawDataReader.py  test_aeroviz_import.py  test_import.py  test_imports.py  test_optical_brc.py  test_plot.py  test_plot_interactive.py  test_time_grid.py
tests/fixtures/: README.md
tests/test_dataprocess/: test_chemistry.py  test_chemistry_isoropia.py  test_optical_brc.py  test_optical_improve.py  test_optical_mie.py  test_optical_mie_angular.py  test_optical_mie_core_shell.py  test_optical_mie_inverse.py  test_size.py  test_voc.py
tests/test_readers/: __init__.py  base.py  test_ae33.py  test_ae43.py  test_aps.py  test_aurora.py  test_bam1020.py  test_bc1054.py  test_cache.py  test_epa.py  test_grimm.py  test_igac.py  test_ma350.py  test_minion.py  test_neph.py  test_ocec.py  test_qacsm.py  test_qc_ignored_values.py  test_smps.py  test_teom.py  test_voc.py  test_xact.py
theory/: index.html
theory/icrp/: index.html
theory/improve/: index.html
theory/kappa/: index.html
theory/lognormal/: index.html
theory/mass_reconstruction/: index.html
theory/mie/: index.html
theory/ofp/: index.html
(+198 files in other folders)
