[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AeroViz"
version = "0.1.19"
description = "Aerosol science"
authors = [{ name = "alex", email = "alex870521@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "scipy>=1.14.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.5.1",
    "windrose>=1.9.2",
    "cartopy>=0.24.1",
    "tabulate>=0.9.0",
    "rich~=13.9.4",
    "numba~=0.61.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
]
dev = [
    "black>=23.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "build",
    "twine",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.0",
    "mkdocstrings[python]>=0.18.0",
]

[tool.pytest.ini_options]
pythonpath = "."
markers = [
    "requires_data: marks tests that require actual data files",
]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
changelog_file = "docs/CHANGELOG.md"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[project.urls]
Homepage = "https://github.com/Alex870521/AeroViz"
Repository = "https://github.com/Alex870521/AeroViz"
Issues = "https://github.com/Alex870521/AeroViz/issues"

# 只保留一個 setuptools 配置部分
[tool.setuptools.packages.find]
where = ["."]
include = ["AeroViz*"]
exclude = ["tests*"]
namespaces = false

[tool.setuptools.package-data]
AeroViz = ["*", "**/*"]
