[build-system]
requires = [
    "meson-python>=0.16",
    "meson>=1.2.0",
    "ninja",
    "numpy>=2.0",
]
build-backend = "mesonpy"

[project]
name = "AeroViz"
version = "0.3.4"
description = "Aerosol data processing and visualization toolkit. Read, QC, and analyze data from SMPS, APS, AE33, TEOM, Nephelometer, XRF, and 15+ atmospheric instruments."
authors = [{ name = "Alex Chan", email = "alex870521@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    # Core functionality
    "aerosol",
    "atmospheric-science",
    "air-quality",
    "data-processing",
    "visualization",
    # Measurements
    "PM2.5",
    "PM10",
    "black-carbon",
    "particle-size-distribution",
    "optical-properties",
    # Instruments
    "SMPS",
    "APS",
    "aethalometer",
    "nephelometer",
    "TEOM",
    "XRF",
    "OC-EC",
    # Applications
    "environmental-monitoring",
    "research",
    "quality-control",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "matplotlib>=3.8.4",
    "scipy>=1.15.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.5.1",
    "windrose>=1.9.2",
    "cartopy>=0.24.1",
    "tabulate>=0.9.0",
    "rich~=13.9.4",
    "numba>=0.63.0",
    "plotly>=5.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
]
dev = [
    "black>=23.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "build",
    "twine",
    "commitizen>=3.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.0",
    "mkdocstrings[python]>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/Alex870521/AeroViz"
Documentation = "https://alex870521.github.io/AeroViz/"
Repository = "https://github.com/Alex870521/AeroViz"
Issues = "https://github.com/Alex870521/AeroViz/issues"
Changelog = "https://github.com/Alex870521/AeroViz/blob/main/docs/CHANGELOG.md"

[tool.pytest.ini_options]
# Don't set pythonpath="." — that would shadow the installed package
# (where the compiled Fortran extension lives) with the bare source
# tree. After `pip install [-e] .`, the editable loader or installed
# wheel handles import resolution.
markers = [
    "requires_data: marks tests that require actual data files",
    "reader: rawDataReader pipeline tests (slow, I/O heavy)",
    "dataprocess: post-processing tests under AeroViz.dataProcess.*",
    "optical: optical-property tests (Mie, IMPROVE, BrC, RI retrieval)",
    "slow: long-running tests; excluded from the quick PR job",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
changelog_file = "docs/CHANGELOG.md"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
annotated_tag = true

[tool.meson-python.args]
setup = []
dist = []
install = []
compile = []
